Simple SNN (classifier)

--- a/notebooks/simple-perceptron.ipynb
+++ b/notebooks/simple-perceptron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 393,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 394,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cuda')"
      },
-     "execution_count": 380,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "device = torch.device(\"cuda\")\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "device"
    ],
    "metadata": {
@@ -45,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 395,
    "outputs": [
     {
      "data": {
       "text/plain": "<torch._C.Generator at 0x22a9b1912f0>"
      },
-     "execution_count": 381,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 396,
    "outputs": [],
    "source": [
     "class SimplePredictor(nn.Module):\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 397,
    "outputs": [],
    "source": [
     "def get_accuracy(model, loader, pct_close):\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 398,
    "outputs": [],
    "source": [
     "data06 = pd.read_csv(\"../data/processed/target06.csv\")"
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 399,
    "outputs": [],
    "source": [
     "all_data = data.TensorDataset(torch.from_numpy((data06.values[:,:-1] - data06.values[:,:-1].min(0)) / data06.values[:,:-1].ptp(0)).float(), torch.from_numpy(data06.values[:,-1]).float())  # with normalization\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 400,
    "outputs": [],
    "source": [
     "data_loader = data.DataLoader(train_dataset, batch_size=64, shuffle=True, drop_last=True)\n",
@@ -204,28 +204,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 401,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "SimplePredictor(\n",
-      "  (linear1): Linear(in_features=8, out_features=300, bias=True)\n",
-      "  (bn1): BatchNorm1d(300, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (linear1): Linear(in_features=8, out_features=500, bias=True)\n",
+      "  (bn1): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  (fn1): LeakyReLU(negative_slope=0.01)\n",
       "  (d1): Dropout(p=0.3, inplace=False)\n",
-      "  (linear2): Linear(in_features=300, out_features=300, bias=True)\n",
-      "  (bn2): BatchNorm1d(300, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "  (linear2): Linear(in_features=500, out_features=500, bias=True)\n",
+      "  (bn2): BatchNorm1d(500, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "  (fn2): LeakyReLU(negative_slope=0.01)\n",
       "  (d2): Dropout(p=0.3, inplace=False)\n",
-      "  (linear3): Linear(in_features=300, out_features=1, bias=True)\n",
+      "  (linear3): Linear(in_features=500, out_features=1, bias=True)\n",
       ")\n"
      ]
     }
    ],
    "source": [
-    "model = SimplePredictor(num_inputs=8, num_hidden=300, num_outputs=1)\n",
+    "model = SimplePredictor(num_inputs=8, num_hidden=500, num_outputs=1)\n",
     "model.to(device)\n",
     "print(model)"
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 402,
    "outputs": [],
    "source": [
     "loss_fun = nn.MSELoss()\n",
@@ -263,42 +263,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 409,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 0, loss: 7.36e+02, acc: 0.0\n",
-      "Epoch: 10, loss: 8.34e+02, acc: 0.0\n",
-      "Epoch: 20, loss: 4.62e+02, acc: 0.0011560693641618498\n",
-      "Epoch: 30, loss: 7.85e+02, acc: 0.003468208092485549\n",
-      "Epoch: 40, loss: 3.44e+02, acc: 0.006936416184971098\n",
-      "Epoch: 50, loss: 3.23e+02, acc: 0.015028901734104046\n",
-      "Epoch: 60, loss: 2.4e+02, acc: 0.025433526011560695\n",
-      "Epoch: 70, loss: 2.28e+02, acc: 0.03468208092485549\n",
-      "Epoch: 80, loss: 1.68e+02, acc: 0.06242774566473988\n",
-      "Epoch: 90, loss: 1.7e+02, acc: 0.06358381502890173\n",
-      "Epoch: 100, loss: 1.32e+02, acc: 0.07745664739884393\n",
-      "Epoch: 110, loss: 1.4e+02, acc: 0.08323699421965318\n",
-      "Epoch: 120, loss: 1.19e+02, acc: 0.13641618497109825\n",
-      "Epoch: 130, loss: 82.7, acc: 0.19653179190751446\n",
-      "Epoch: 140, loss: 1.75e+02, acc: 0.2543352601156069\n",
-      "Epoch: 150, loss: 1.22e+02, acc: 0.30289017341040464\n",
-      "Epoch: 160, loss: 57.0, acc: 0.3190751445086705\n",
-      "Epoch: 170, loss: 80.6, acc: 0.3514450867052023\n",
-      "Epoch: 180, loss: 89.6, acc: 0.3791907514450867\n",
-      "Epoch: 190, loss: 68.4, acc: 0.3872832369942196\n",
-      "Epoch: 200, loss: 75.9, acc: 0.3838150289017341\n",
-      "Epoch: 210, loss: 1.11e+02, acc: 0.3815028901734104\n",
-      "Epoch: 220, loss: 1.16e+02, acc: 0.3953757225433526\n",
-      "Epoch: 230, loss: 1.17e+02, acc: 0.3895953757225434\n",
-      "Epoch: 240, loss: 70.2, acc: 0.3953757225433526\n",
-      "Epoch: 250, loss: 64.4, acc: 0.3895953757225434\n",
-      "Epoch: 260, loss: 67.8, acc: 0.3965317919075145\n",
-      "Epoch: 270, loss: 86.6, acc: 0.3884393063583815\n",
-      "Epoch: 280, loss: 1.06e+02, acc: 0.3861271676300578\n",
-      "Epoch: 290, loss: 74.8, acc: 0.3976878612716763\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [409]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      5\u001B[0m data_labels \u001B[38;5;241m=\u001B[39m data_labels\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m      6\u001B[0m preds \u001B[38;5;241m=\u001B[39m model(data_inputs)\n\u001B[1;32m----> 7\u001B[0m preds \u001B[38;5;241m=\u001B[39m \u001B[43mpreds\u001B[49m\u001B[38;5;241m.\u001B[39msqueeze(dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m loss \u001B[38;5;241m=\u001B[39m loss_fun(preds, data_labels)\n\u001B[0;32m      9\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n",
+      "Input \u001B[1;32mIn [409]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      5\u001B[0m data_labels \u001B[38;5;241m=\u001B[39m data_labels\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m      6\u001B[0m preds \u001B[38;5;241m=\u001B[39m model(data_inputs)\n\u001B[1;32m----> 7\u001B[0m preds \u001B[38;5;241m=\u001B[39m \u001B[43mpreds\u001B[49m\u001B[38;5;241m.\u001B[39msqueeze(dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      8\u001B[0m loss \u001B[38;5;241m=\u001B[39m loss_fun(preds, data_labels)\n\u001B[0;32m      9\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mzero_grad()\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1180\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.SafeCallWrapper.__call__\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:621\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1096\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_39_64.pyx:1054\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_39_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers-pro\\jupyter_debug\\pydev_jupyter_plugin.py:165\u001B[0m, in \u001B[0;36mstop\u001B[1;34m(plugin, pydb, frame, event, args, stop_info, arg, step_cmd)\u001B[0m\n\u001B[0;32m    163\u001B[0m     frame \u001B[38;5;241m=\u001B[39m suspend_jupyter(main_debugger, thread, frame, step_cmd)\n\u001B[0;32m    164\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m frame:\n\u001B[1;32m--> 165\u001B[0m         \u001B[43mmain_debugger\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    166\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m    167\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mFalse\u001B[39;00m\n",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers\\pydev\\pydevd.py:1147\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1144\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1146\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1147\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\DataSpell 2021.3.1\\plugins\\python-ce\\helpers\\pydev\\pydevd.py:1162\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1159\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1161\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1162\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1164\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1166\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -325,13 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 404,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.4092485549132948"
+      "text/plain": "0.41502890173410406"
      },
-     "execution_count": 390,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,13 +333,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 405,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([24.9500, 21.5200,  8.2900,  7.9000, 23.4700, 22.2500, 56.1500, 16.1700,\n        14.7100, 66.9300, 21.7900, 15.4800,  9.3500, 21.7100, 16.5300, 38.6200,\n        10.1500, 20.4600, 17.9100, 29.2800, 41.2500, 16.3300, 10.4500,  9.1900,\n        12.0900,  3.6900, 14.9000, 22.7200, 15.6800, 11.9000, 36.4800, 12.2200,\n        12.6400, 13.5600, 29.5500, 32.6500, 29.1600, 24.2900, 14.5900, 29.3300,\n        20.3000, 23.9300, 15.9400, 12.4500, 17.3900,  7.0200, 15.2800,  7.0300,\n        18.8200, 34.2000, 32.3900, 51.0200, 16.9500, 12.5400, 16.5100,  9.7100,\n        13.2500, 25.3200, 14.3000,  9.0700,  9.6500, 15.8900,  4.2600, 12.0600],\n       device='cuda:0')"
+      "text/plain": "tensor([  7.3100,  23.8300,  17.0900,  16.7200,  17.6200,   4.7100,  24.1400,\n         60.7700,  24.0200,  15.0500,   6.7800,  13.0900,  29.9500,  24.4800,\n          9.4600,   9.2800,  30.8900,  29.0800,  12.0500,   9.4300,   9.1100,\n         56.6800,  16.2800,  17.7600,  26.7300,  31.9300,  35.3100,  13.4300,\n         64.2500,  23.5900,  55.9300,  28.3900,   5.7700,  14.0900,  11.6300,\n         20.8500,  18.6600,  35.7100,  15.2500,  43.5600,  16.8000,  22.3600,\n         45.5500,  29.6800,  45.1900,   7.0200,   6.7100,   7.7900,  32.2300,\n         16.5200,  16.0700,  29.5300,  17.7600,  16.9000,  22.6300,  15.6400,\n         23.5400,  17.0200, 107.0300,  34.4500,  14.7100,  17.0200,  33.2800,\n          8.0300], device='cuda:0')"
      },
-     "execution_count": 391,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,13 +356,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 406,
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([12.8636, 26.4139, 14.2402, 12.4019, 32.3715, 20.2916, 61.6947, 33.9478,\n        13.5699, 44.9695, 16.5993, 15.7461, 11.2462, 18.4349, 18.4429, 33.6172,\n        15.8223, 20.7246, 13.6811, 22.8553, 39.9642, 14.7579, 14.9323, 14.3362,\n        25.5350, 18.4485, 18.1879, 29.4806, 31.1633,  8.8487, 20.3193, 24.5834,\n        13.7796, 27.0540, 20.7070, 25.0987, 46.6343, 17.1021, 10.9134, 21.4790,\n        26.6901, 21.4482, 19.2879, 12.8897, 20.9707,  8.9411, 10.1038, 25.2689,\n        14.0907, 27.4160, 16.7024, 34.7234, 16.5905, 13.4571, 39.3282, 18.0339,\n        19.5916, 34.8895, 19.0875,  9.0359, 17.9265, 18.8102,  3.9590, 14.2117],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
+      "text/plain": "tensor([11.3600, 17.8969, 18.0133, 19.0191, 15.2848, 14.5450, 20.0980, 36.6738,\n         9.6147, 13.2605, 21.8079, 10.2801, 23.8805, 16.0375, 11.5407, 14.6885,\n        37.4205, 21.9232, 15.9340, 12.8984, 11.0779, 25.0718, 11.2050, 16.2207,\n        18.6796, 18.7991, 27.1358, 16.7870, 71.8349, 21.0481, 46.3770, 13.9490,\n        10.8034, 11.6345, 12.5956, 23.8274, 21.6561, 18.2344, 14.5048, 48.8154,\n        19.9559, 17.4760, 54.2418, 11.8113, 46.1624,  8.8858, 13.2907, 10.2789,\n        16.0052, 14.8832, 16.4630, 23.4398, 19.0115, 18.7728, 21.8953, 11.1997,\n        20.9393, 14.9818, 84.7230, 29.2692, 12.1623, 15.5643, 18.3759, 14.1447],\n       device='cuda:0', grad_fn=<SqueezeBackward1>)"
      },
-     "execution_count": 392,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 406,
    "outputs": [],
    "source": [],
    "metadata": {
